Agregado una descripción en la etiqueta opciones

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li>Home</li>
             <li>Contacto</li>
             <li>Servicio</li>
-            <li>Opciones</li>
+            <li>Opciones de configuración</li>
         </ul>
     
     </body>
